[package]
name = "smart-http-requester-worker-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"]}
lapin = {version = "4.10.0", features = ["tokio"]}
sqlx = {version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid"]}
config = {version = "0.15.25", features = ["yaml"]}
anyhow = {version = "1.0.103", features = []}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.150", features = []}
futures-util = { version = "0.3.32", features = [] }
uuid = { version = "1.23.4", features = ["serde"] }
reqwest = {version = "0.13.4", features = []}
tracing = {version = "0.1.44", features = []}
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
